# azure-openai-playground

./: .env.sample  .gitignore  pyproject.toml
notebooks/: pdfparse.ipynb  simple-completion-example.ipynb
src/: main.py
src/simple-completion/: simple-completion-example.ipynb
